fixed spacing issues and make my picture always on top

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -20,19 +20,6 @@
 		font-weight: 300;
 	}
 
-	.image.avatar48
-			{
-				width: 48px;
-				height: 48px;
-				background: transparent;
-			}
-			
-				.image.avatar48 img
-				{
-					width: 48px;
-					height: 48px;
-					border-radius: 50%
-				}
 
 
 
