--- a/css/style-narrower.css
+++ b/css/style-narrower.css
@@ -24,15 +24,15 @@
 
 	.image.avatar48
 			{
-				width: 48px;
-				height: 48px;
+				width: 70px;
+				height: 70px;
 				background: transparent;
 			}
 			
 				.image.avatar48 img
 				{
-					width: 48px;
-					height: 48px;
+					width: 70px;
+					height: 70px;
 					border-radius: 50%
 				}
 				
